--- a/www/clientes.html
+++ b/www/clientes.html
@@ -24,10 +24,10 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <div class="input-group col-xs-6">
-                <input type="text" class="form-control" id="cliente" placeholder="Buscar">
-                <a class="input-group-addon btn btn-search link" onclick="obtenerclients();">
-                  <i class="fa fa-search "> </i>
-                </a>
+                  <input type="text" class="form-control" id="word" placeholder="Buscar">
+                  <a id="search" class="input-group-addon btn btn-search link">
+                    <i class="fa fa-search text-color-marca"> </i>
+                  </a>
               </div>
               <div class="input-group col-xs-6"></div>
             </div>
@@ -36,7 +36,7 @@
                 <thead class="margin-0">
                     <tr>
                         <th width="80%">Nombre</th>
-                        <th class="text-center">Eliminar</th>
+                        <th class="text-center fullaccess">Eliminar</th>
                         <th class="text-center">Visualizar</th>
                     </tr>
                 </thead>
@@ -58,6 +58,12 @@
     <script type="text/javascript" src="js/clientes.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
-      document.addEventListener("deviceready", obtenerclients, false);
+      document.addEventListener("deviceready", function(){
+          obtenerclients(1,-1);
+          $("#search").click(function(){
+              $("#table-clients-users").html("");
+              obtenerclients(1, -1, null, $("#word").val());
+          })
+      }, false);
      </script>
   </body>
