--- a/www/nueva_inspeccion.html
+++ b/www/nueva_inspeccion.html
@@ -42,7 +42,7 @@
                     <th>Marca</th>
                     <th>Modelo</th>
                     <th>Placas</th>
-                    <th class="text-center">Tecnico</th>
+                    <th class="text-center">Técnico</th>
                   </tr>
                 </thead>
                 <tbody id="table-clients"></tbody>
