--- a/www/tecnicos.html
+++ b/www/tecnicos.html
@@ -35,7 +35,7 @@
               <table class="table table-striped default-table">
                 <thead class="margin-0">
                     <tr>
-                        <th width="80%">Tecnico</th>
+                        <th width="80%">Técnico</th>
                         <th class="text-center">Asignar</th>
                     </tr>
                 </thead>
