--- a/www/resultado_inspeccion.html
+++ b/www/resultado_inspeccion.html
@@ -28,19 +28,19 @@
                 <div class="form-group">
                   <div class="add-on input-group">
                     <label class="input-group-addon">Nombre</label>
-                    <input type="text" class="form-control" id="name" value="">
+                    <input type="text" readonly disabled  class="form-control" id="name" value="">
                   </div>
                    </div>
                   <div class="form-group ">
                       <div class="add-on input-group">
                         <label class="input-group-addon">Celular</label>
-                        <input type="text" class="form-control" id="cell" value="">
+                        <input type="text" readonly disabled  class="form-control" id="cell" value="">
                       </div>
                    </div>
                    <div class="form-group ">
                   <div class="add-on input-group">
                     <label class="input-group-addon">Email</label>
-                    <input type="text" class="form-control" id="email" value="">
+                    <input type="text" readonly disabled  class="form-control" id="email" value="">
                     </div>
                   </div>
               </form>
@@ -51,25 +51,25 @@
                 <div class="form-group ">
                   <div class="add-on input-group">
                     <label class="input-group-addon">Marca</label>
-                    <input type="text" size="10" id="brand"  class="form-control" value="">
+                    <input type="text" readonly disabled  size="10" id="brand"  class="form-control" value="">
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="add-on input-group">
                     <label class="input-group-addon">Modelo</label>
-                    <input type="text" size="10" class="form-control" value="" id="model">
+                    <input type="text" readonly disabled  size="10" class="form-control" value="" id="model">
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="add-on input-group">
                     <label class="input-group-addon">VIN</label>
-                    <input type="text" size="10" id="vin" class="form-control" value="">
+                    <input type="text" readonly disabled  size="10" id="vin" class="form-control" value="">
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="add-on input-group">
                         <label class="input-group-addon">Placa</label>
-                        <input type="text" size="10" class="form-control" value="" id="license_plate">
+                        <input type="text" readonly disabled  size="10" class="form-control" value="" id="license_plate">
                     </div>
                 </div>
               </form>
