--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -48,7 +48,19 @@
                   </tr>
                 </thead>
                 <tbody id='table-body'>
+                	<tr id="clone" class="hide">
+                	  <td data-field='folio' data-permissions="true" class="fill-data permission_see_clients"></td>
+                	  <td data-field='name' data-permissions="true" class="fill-data permission_see_clients"></td>
+                	  <td data-field='brand' data-permissions="true" class="fill-data permission_see_clients"></td>
+                	  <td data-field='model' class="fill-data "></td>
+                	  <td data-field='license_plate' class="fill-data "></td>
+                	  <td data-field='status' data-permissions="true" class="fill-data permission_see_inspections permission_advisory_group"> </td>
+                	  <td data-field='edit_link'  data-permissions="true" class="fill-data text-center permission_edit_inspections fullaccess"></td>
+                	</tr>
                 </tbody>
+                <tfoot>
+                    <tr><td colspan ="8" class="text-center"><a id="show_more">Ver más registros</a></td></tr>
+                </tfoot>
               </table>
             </div>
           </div>
@@ -65,11 +77,11 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
       document.addEventListener("deviceready", function(){
-          getInspectionsList(10, -10, null);
+          getInspectionsList(10, 0, null);
 
           $("#search").click(function(){
               $("#table-body").html("");
-              getInspectionsList(10, -10, null, $("#word").val());
+              getInspectionsList(10, 0, null, $("#word").val());
           })
 
 
