--- a/www/navbar.html
+++ b/www/navbar.html
@@ -30,7 +30,7 @@
         <li data-permissions="true" class="hidden-sm hidden-md hidden-lg permission_see_clients"><a class="navbar-link" href="clientes.html"><i class="fa fa-user"></i> Clientes</a></li>
         <li data-permissions="true" class="hidden-sm hidden-md hidden-lg permission_add_inspections fullaccess permission_technical_group"><a class="navbar-link" href="nueva_inspeccion.html"><i class="fa fa-plus"></i> Inspección</a></li>
         <li data-permissions="true" class="hidden-sm hidden-md hidden-lg permission_see_inspections fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="upload_pdf()"class="navbar-link permission_advisory_group"><i class="fa fa-paperclip"></i> Presupuesto</a></li>
-        <li data-permissions="true" class="hide hidden-sm hidden-md hidden-lg permission_see_inspections fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="update_inspection('status', '6')" class="navbar-link permission_advisory_group"><i class="fa fa-power-off"></i> Cerrar</a></li>
+        <li data-permissions="true" class=" hidden-sm hidden-md hidden-lg permission_see_inspections fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="update_inspection('status', '6')" class="hide navbar-link permission_advisory_group"><i class="fa fa-power-off"></i> Cerrar</a></li>
         <li class="hidden-sm hidden-md hidden-lg"><a class="navbar-link" href="index.html"><i class="fa fa-sign-out"></i>Salir</a></li>
         <li class="dropdown visible-sm visible-md visible-lg">
           <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i></a>
@@ -39,7 +39,7 @@
             <li data-permissions="true" class="permission_see_clients"><a class="navbar-link" href="clientes.html"><i class="fa fa-user"></i> Clientes</a></li>
             <li data-permissions="true" class="permission_add_inspections permission_technical_group fullaccess"><a class="navbar-link" href="nueva_inspeccion.html"><i class="fa fa-plus"></i> Inspección</a></li>
             <li data-permissions="true" class="permission_see_inspections fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="upload_pdf()"class="navbar-link permission_advisory_group"><i class="fa fa-paperclip"></i> Presupuesto</a></li>
-            <li data-permissions="true" class="hide permission_see_inspections fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" class="navbar-link permission_advisory_group" onclick="update_inspection('status', '6')" ><i class="fa fa-power-off"></i> Cerrar</a></li>
+            <li data-permissions="true" class="hide permission_see_inspections fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" class="hide navbar-link permission_advisory_group" onclick="update_inspection('status', '6')" ><i class="fa fa-power-off"></i> Cerrar</a></li>
             <li><a class="navbar-link" href="index.html"><i class="fa fa-sign-out"></i> Salir</a></li>
             <!--
             <li class="dropdown-header">Realizar Inspección</li>
