--- a/www/navbar.html
+++ b/www/navbar.html
@@ -17,10 +17,10 @@
           <a data-permissions="true" data-screen="alta_vehiculo.html" class="fullaccess navbar-link permission_add_clients" onclick="accion_vehiculo();" ><i class="fa fa-save"></i></a>
           <a data-permissions="true" data-screen="realizar_inspeccion.html" class="fullaccess navbar-link permission_technical_group" onclick="guardar('Asesor')" ><i class="fa fa-paper-plane"></i></a>
 
-          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess navbar-link permission_advisory_group hide" onclick="update_inspection('status', '1')" ><i class="fa fa-check "></i></a>
-          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess navbar-link permission_advisory_group hide" onclick="update_inspection('status', '5')" ><i class="fa fa-check "></i></a>
-          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess navbar-link permission_advisory_group hide" onclick="update_inspection('status', '2')" ><i class="fa fa-save "></i></a>
-          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess navbar-link permission_advisory_group hide" onclick="update_inspection('status', '3')" ><i class="fa fa-paper-plane "></i></a>
+          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group hide" onclick="update_inspection('status', '1')" ><i class="fa fa-check "></i></a>
+          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group hide" onclick="update_inspection('status', '5')" ><i class="fa fa-check "></i></a>
+          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group hide" onclick="update_inspection('status', '2')" ><i class="fa fa-save "></i></a>
+          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group hide" onclick="update_inspection('status', '3')" ><i class="fa fa-paper-plane "></i></a>
       </div>
     </div>
 
