--- a/www/resultado_inspeccion.html
+++ b/www/resultado_inspeccion.html
@@ -90,7 +90,7 @@
               </table>
             </div>
             <form id="pdfform"  enctype="multipart/form-data">
-              <input id="pdf"  class="pdf" type="file" />
+              <input id="pdf"  class="pdf hide" type="file" />
             </form>
           </div>
         </div>
