--- a/www/navbar.html
+++ b/www/navbar.html
@@ -10,12 +10,12 @@
         <span class="icon-bar"></span>
       </button>
       <div id="buttonmenu" name="buttonmenu" style="width: auto;height: 50px; text-align: right; padding-top: 14px;">
-          <a  data-screen="realizar_inspeccion.html" class="fullaccess navbar-link  update_inspection_status_1" onclick="guardar(0)"><i class="fa fa-save"></i></a>
-          <a data-permissions="true" data-screen="clientes.html" class="fullaccess navbar-link hide   permission_add_clients" href="alta_cliente.html " ><i class="fa fa-plus"></i></a>
+          <a data-permissions="true" data-screen="realizar_inspeccion.html" class="fullaccess navbar-link permission_technical_group edit_inspections" onclick="guardar(0)"><i class="fa fa-save"></i></a>
+          <a data-permissions="true" data-screen="clientes.html" class="fullaccess navbar-link permission_add_clients" href="alta_cliente.html " ><i class="fa fa-plus"></i></a>
           <a data-permissions="true" data-screen="alta_cliente.html" class="fullaccess navbar-link permission_add_clients" href="alta_vehiculo.html" ><i class="fa fa-car"></i></a>
           <a data-permissions="true" data-screen="alta_cliente.html" class="fullaccess navbar-link permission_add_clients" onclick="accion_cliente();" ><i class="fa fa-save"></i></a>
           <a data-permissions="true" data-screen="alta_vehiculo.html" class="fullaccess navbar-link permission_add_clients" onclick="accion_vehiculo();" ><i class="fa fa-save"></i></a>
-          <a  data-screen="realizar_inspeccion.html" class="fullaccess  update_inspection_status_2 navbar-link =" onclick="guardar('Asesor')" ><i class="fa fa-paper-plane"></i></a>
+          <a data-permissions="true" data-screen="realizar_inspeccion.html" class="fullaccess navbar-link permission_technical_group edit_inspections" onclick="guardar('Asesor')" ><i class="fa fa-paper-plane"></i></a>
 
           <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group hide update_inspection_status_1" onclick="update_inspection('status', '1')" ><i class="fa fa-check "></i></a>
           <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group hide update_inspection_status_5" onclick="update_inspection('status', '5')" ><i class="fa fa-check "></i></a>
