--- a/www/realizar_inspeccion.html
+++ b/www/realizar_inspeccion.html
@@ -29,6 +29,7 @@
                     <input type="text" size="10" class="form-control" value="" id="model">
                     <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">
                     <input type="hidden" size="10" class="form-control" value="" id="inspections_id">
+                                      <input type="hidden" size="10" class="form-control" value="" id="inspection_id">
                   </div>
                   </div>
                   <div class="form-group">
