--- a/www/navbar.html
+++ b/www/navbar.html
@@ -53,4 +53,4 @@
 </nav>
 <div id="readonly-alert" style="z-index: 100; top:50px; position: absolute; width: 100%;" class="text-center alert alert-danger hide "><b>Readonly Access</b> Su cuenta ha expirado, activar licencia full access <a href="#">aqui</a> </div>
 
-<div id="network" style="z-index: 102; top:50px;" class="text-center alert alert-warning hide"><b>Offline</b></div>
+<div id="network" style="z-index: 102; top:50px; width:100%: position:absolute;" class="text-center alert alert-danger hide"><h1>OFFLINE</h1></div>
