--- a/www/cliente_detalle.html
+++ b/www/cliente_detalle.html
@@ -5,15 +5,50 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
-    <title>Cliente</title>
   </head>
   <body>
     <!-- navbar -->
-    <div id="navbar"></div>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <h4 class="text-muted titulo text-center">Clientes</h4>
+      <div class="container-fluid">
+        <a class="navbar-link navbar-brand" href="#" onclick="history.go(-1);"><i class="fa fa-arrow-circle-left"></i></a>
+        <div class="navbar-header">
+          <button type="button" class="navbar-link navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="asesor.html" class="navbar-link">Asesor</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="cliente_detalle.html" class="navbar-link">Clientes detall</a></li>
+            <li class="dropdown visible-sm visible-md visible-lg">
+              <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"> </i></a>
+              <ul class="dropdown-menu">
+                <li><a href="index.html" class="navbar-link">Log In</a></li>
+                <li><a href="asesor.html" class="navbar-link">Asesor</a></li>
+                <li><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+                <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
+                <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
+                <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
+                <li><a href="cliente_detalle.html" class="navbar-link">Cliente detalle</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav><!-- navbar -->
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-1">
-          <h1><img name="logo" id='logo' src="" width="70px"></h1>
+          <h1><img src="img/logo-bosh.jpg" width="70px"></h1>
         </div>
       </div>
       <div class="row">
@@ -22,7 +57,7 @@
             <div class="panel-heading">
               <div class="input-group col-xs-6">
                 <input type="text" class="form-control" id="cliente" placeholder="Buscar">
-                <a class="input-group-addon btn btn-search link" onclick="obtenerclients();">
+                <a class="input-group-addon btn btn-search link" onclick="gridClientes();">
                   <i class="fa fa-search "> </i>
                 </a>
               </div>
@@ -33,13 +68,29 @@
                 <thead class="margin-0">
                     <tr>
                         <th width="80%">Nombre</th>
-                        <th class="text-center">Eliminar</th>
+                        <th class="text-center">Trash</th>
                         <th class="text-center">Visualizar</th>
                     </tr>
                 </thead>
-                <tbody id="table-clients-users"></tbody>
+                <tbody>
+                  <tr>
+                    <td>Lorem Ipsum</td>
+                    <td class="text-center"><a href="#"><b><i class="fa fa-trash"></b></i></a></td>
+                    <td class="text-center"><a href="#"><b><i class="fa fa-angle-right"></b></i></a></td>
+                  </tr>
+                    <tr>
+                      <td>Lorem Ipsum</td>
+                      <td class="text-center"><a href="#"><b><i class="fa fa-trash"></b></i></a></td>
+                      <td class="text-center"><a href="#"><b><i class="fa fa-angle-right"></b></i></a></td>
+                    </tr>
+
+                      <tr>
+                        <td>Lorem Ipsum</td>
+                        <td class="text-center"><a href="#"><b><i class="fa fa-trash"></b></i></a></td>
+                        <td class="text-center"><a href="#"><b><i class="fa fa-angle-right"></b></i></a></td>
+                      </tr>
+                </tbody>
               </table>
-				      <div id="alertaCliente" class="text-center text-red"></div>
             </div>
             <div class="panel-footer"></div>
           </div>
@@ -48,14 +99,12 @@
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
-    <script type="text/javascript" src="js/commun.js"></script>
-    <script type="text/javascript" src="js/filter.js"></script>
-    <script type="text/javascript" src="js/inspections.js"></script>
-    <script type="text/javascript" src="js/vehiculos.js"></script>
-    <script type="text/javascript" src="js/clientes.js"></script>
-    <script type="text/javascript" src="cordova.js"></script>
+
     <script type="text/javascript">
-      document.addEventListener("deviceready", obtenerclients, false);
+        $(document).ready(function() {
+            gridClientes();
+        });
      </script>
   </body>
