--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -74,6 +74,7 @@
     <script type="text/javascript" src="js/push.js"></script>
     <script type="text/javascript" src="js/filter.js"></script>
     <script type="text/javascript" src="js/inspections.js"></script>
+    <script type="text/javascript" src="js/sync.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
       document.addEventListener("deviceready", function(){
