--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -43,7 +43,7 @@
                     <th data-permissions="true" class="permission_advisory_group text-left permission_technical_group">Marca</th>
                     <th class="text-left">Modelo</th>
                     <th class="text-left">Placas</th>
-                    <th  data-permissions="true" class=" permission_advisory_group permission_technical_group text-center">Estatus</th>
+                    <th  data-permissions="true" class=" permission_advisory_group permission_technical_group">Estatus</th>
                     <th data-permissions="true" class="permission_technical_group   text-center fullaccess">Modificar</th>
                   </tr>
                 </thead>
@@ -54,7 +54,7 @@
                 	  <td data-field='brand' data-permissions="true" class="fill-data permission_technical_group permission_advisory_group"></td>
                 	  <td data-field='model' class="fill-data "></td>
                 	  <td data-field='license_plate' class="fill-data "></td>
-                	  <td data-field='status' data-permissions="true" class="fill-data text-center  permission_advisory_group permission_technical_group"> </td>
+                	  <td data-field='status' data-permissions="true" class="fill-data permission_advisory_group permission_technical_group"> </td>
                 	  <td data-field='edit_link'  data-permissions="true" class="fill-data permission_technical_group  text-center  fullaccess"></td>
                 	</tr>
                 </tbody>
