--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-user"> </i></span>
-                                <input value="asesor@example.com" type="email" id="email" class="form-control" placeholder="Usuario">
+                                <input value="asesor@speedee.com" type="email" id="email" class="form-control" placeholder="Usuario">
                             </div>
                         </div>
                         <div class="form-group">
@@ -37,7 +37,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-key"> </i></span>
-                                <input value="55opg" type="token" id="token" class="form-control" placeholder="Token">
+                                <input value="6yigp" type="token" id="token" class="form-control" placeholder="Token">
                             </div>
                         </div>
                         <button type="submit" class="pull-right btn btn-primary mt-4" ><i class="fa fa-sign-in"> </i> Ingresar</button>
