--- a/www/navbar.html
+++ b/www/navbar.html
@@ -3,54 +3,47 @@
   <div class="container-fluid">
     <a class="navbar-link navbar-brand" href="dashboard.html"><i class="fa fa-arrow-circle-left"></i></a>
     <div class="navbar-header">
-      <button type="button" class="navbar-link navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <div id="buttonmenu" name="buttonmenu" style="width: auto;height: 50px; text-align: right; padding-top: 14px;">
-
-          <a data-permissions="true" data-screen="clientes.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group" href="alta_cliente.html " ><i class="fa fa-plus"></i></a>
-          <a data-permissions="true" data-screen="alta_cliente.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group" href="alta_vehiculo.html" ><i class="fa fa-car"></i></a>
-          <a data-permissions="true" data-screen="alta_cliente.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group" onclick="accion_cliente();" ><i class="fa fa-save"></i></a>
-          <a data-permissions="true" data-screen="alta_vehiculo.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group" onclick="accion_vehiculo();" ><i class="fa fa-save"></i></a>
-         <a data-permissions="true" data-screen="realizar_inspeccion.html" class="fullaccess navbar-link hide update_inspection_status_2 permission_advisory_group permission_technical_group" onclick="guardar(0)"><i class="fa fa-save"></i></a>
-
-          <a data-permissions="true" data-screen="realizar_inspeccion.html" class="fullaccess navbar-link update_inspection_status_2 hide  permission_advisory_group permission_technical_group" onclick="guardar('Asesor')" ><i class="fa fa-paper-plane"></i></a>
-
-          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group hide update_inspection_status_3" onclick="update_inspection('status', '3')" ><i class="fa fa-paper-plane "></i></a>
-          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group permission_technical_group hide update_inspection_status_5" onclick="update_inspection('status', '5')" ><i class="fa fa-check "></i></a>
-          <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group permission_technical_group hide update_inspection_status_5" onclick="update_inspection('status', '1')" ><i class="fa fa-wrench "></i></a>
-
-
-      </div>
+        <button type="button" class="navbar-link navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <div id="buttonmenu" name="buttonmenu" style="width: auto;height: 50px; text-align: right; padding-top: 14px;">
+            <a class="text-success hide" id="dbRefresh" style="font-size:1.6em"><i class="fa fa-refresh"></i></a>
+            <a class="text-success" id="netStatus" style="font-size:1.6em"><i class="fa fa-wifi"></i></a>
+            <a data-permissions="true" data-screen="clientes.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group" href="alta_cliente.html " ><i class="fa fa-plus"></i></a>
+            <a data-permissions="true" data-screen="alta_cliente.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group" href="alta_vehiculo.html" ><i class="fa fa-car"></i></a>
+            <a data-permissions="true" data-screen="alta_cliente.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group" onclick="accion_cliente();" ><i class="fa fa-save"></i></a>
+            <a data-permissions="true" data-screen="alta_vehiculo.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group" onclick="accion_vehiculo();" ><i class="fa fa-save"></i></a>
+            <a data-permissions="true" data-screen="realizar_inspeccion.html" class="fullaccess navbar-link hide update_inspection_status_2 permission_advisory_group permission_technical_group" onclick="guardar(0)"><i class="fa fa-save"></i></a>
+            <a data-permissions="true" data-screen="realizar_inspeccion.html" class="fullaccess navbar-link update_inspection_status_2 hide  permission_advisory_group permission_technical_group" onclick="guardar('Asesor')" ><i class="fa fa-paper-plane"></i></a>
+            <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess navbar-link permission_advisory_group permission_technical_group hide update_inspection_status_3" onclick="update_inspection('status', '3')" ><i class="fa fa-paper-plane "></i></a>
+            <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group permission_technical_group hide update_inspection_status_5" onclick="update_inspection('status', '5')" ><i class="fa fa-check "></i></a>
+            <a data-permissions="true" data-screen="resultado_inspeccion.html" class="fullaccess hide navbar-link permission_advisory_group permission_technical_group hide update_inspection_status_5" onclick="update_inspection('status', '1')" ><i class="fa fa-wrench "></i></a>
+        </div>
     </div>
-
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li  class="hidden-sm hidden-md hidden-lg "><a href="dashboard.html" class="navbar-link"><i class="fa fa-home"></i> Inicio </a></li>
-        <li  class="hidden-sm hidden-md hidden-lg "><a class="navbar-link" href="clientes.html"><i class="fa fa-user"></i> Clientes</a></li>
-        <li  class="hidden-sm hidden-md hidden-lg  fullaccess "><a class="navbar-link" href="nueva_inspeccion.html"><i class="fa fa-plus"></i> Inspección</a></li>
-        <li data-permissions="true" class="hidden-sm  hidden-md hidden-lg permission_attach_budget fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="upload_pdf()"class="navbar-link permission_attach_budget"><i class="fa fa-paperclip"></i> Presupuesto</a></li>
-        <li class=" hidden-sm hidden-md hidden-lg permission_close  fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="update_inspection('status', '6')" class=" navbar-link hide update_inspection_status_4 permission_close update_inspection_status_5 update_inspection_status_6 "><i class="fa fa-power-off"></i> Cerrar</a></li>
-        <li class="hidden-sm hidden-md hidden-lg"><a class="navbar-link" href="index.html"><i class="fa fa-sign-out"></i>Salir</a></li>
-        <li class="dropdown visible-sm visible-md visible-lg">
-          <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i></a>
-          <ul class="dropdown-menu">
-            <li><a href="dashboard.html" class="navbar-link"><i class="fa fa-home"></i> Inicio</a></li>
-            <li><a class="navbar-link" href="clientes.html"><i class="fa fa-user"></i> Clientes</a></li>
-            <li><a class="navbar-link" href="nueva_inspeccion.html"><i class="fa fa-plus"></i> Inspección</a></li>
-            <li data-permissions="true" class="permission_attach_budget  fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="upload_pdf()" class="navbar-link permission_attach_budget"><i class="fa fa-paperclip"></i> Presupuesto</a></li>
-            <li data-permissions="true" class="permission_close "><a data-permissions="true" data-screen="resultado_inspeccion.html"  onclick="update_inspection('status', '6')" class="navbar-link hide update_inspection_status_4 permission_close update_inspection_status_5 update_inspection_status_6" ><i class="fa fa-power-off"></i> Cerrar</a></li>
-            <li><a class="navbar-link" href="index.html"><i class="fa fa-sign-out"></i> Salir</a></li>
-
-          </ul>
-        </li>
-      </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li  class="hidden-sm hidden-md hidden-lg "><a href="dashboard.html" class="navbar-link"><i class="fa fa-home"></i> Inicio </a></li>
+            <li  class="hidden-sm hidden-md hidden-lg "><a class="navbar-link" href="clientes.html"><i class="fa fa-user"></i> Clientes</a></li>
+            <li  class="hidden-sm hidden-md hidden-lg  fullaccess "><a class="navbar-link" href="nueva_inspeccion.html"><i class="fa fa-plus"></i> Inspección</a></li>
+            <li data-permissions="true" class="hidden-sm  hidden-md hidden-lg permission_attach_budget fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="upload_pdf()"class="navbar-link permission_attach_budget"><i class="fa fa-paperclip"></i> Presupuesto</a></li>
+            <li class=" hidden-sm hidden-md hidden-lg permission_close  fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="update_inspection('status', '6')" class=" navbar-link hide update_inspection_status_4 permission_close update_inspection_status_5 update_inspection_status_6 "><i class="fa fa-power-off"></i> Cerrar</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a class="navbar-link" href="index.html"><i class="fa fa-sign-out"></i>Salir</a></li>
+            <li class="dropdown visible-sm visible-md visible-lg">
+                <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i></a>
+                <ul class="dropdown-menu">
+                    <li><a href="dashboard.html" class="navbar-link"><i class="fa fa-home"></i> Inicio</a></li>
+                    <li><a class="navbar-link" href="clientes.html"><i class="fa fa-user"></i> Clientes</a></li>
+                    <li><a class="navbar-link" href="nueva_inspeccion.html"><i class="fa fa-plus"></i> Inspección</a></li>
+                    <li data-permissions="true" class="permission_attach_budget  fullaccess"><a data-permissions="true" data-screen="resultado_inspeccion.html" onclick="upload_pdf()" class="navbar-link permission_attach_budget"><i class="fa fa-paperclip"></i> Presupuesto</a></li>
+                    <li data-permissions="true" class="permission_close "><a data-permissions="true" data-screen="resultado_inspeccion.html"  onclick="update_inspection('status', '6')" class="navbar-link hide update_inspection_status_4 permission_close update_inspection_status_5 update_inspection_status_6" ><i class="fa fa-power-off"></i> Cerrar</a></li>
+                    <li><a class="navbar-link" href="index.html"><i class="fa fa-sign-out"></i> Salir</a></li>
+                </ul>
+            </li>
+        </ul>
     </div>
   </div>
 </nav>
 <div id="readonly-alert" style="z-index: 100; top:50px; position: absolute; width: 100%;" class="text-center alert alert-danger hide "><b>Readonly Access</b> Su cuenta ha expirado, activar licencia full access <a href="#">aqui</a> </div>
-
-<div id="network" style="z-index: 102; top:50px; width:100%: position:absolute;" class="text-center alert alert-danger hide"><br><br><h1>Offline</h1><br><br></div>
