--- a/www/index.html
+++ b/www/index.html
@@ -55,12 +55,14 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
+    <script type="text/javascript" src="js/commun.js"></script>
+    <script type="text/javascript" src="js/sync.js"></script>
     <script type="text/javascript" src="js/auth.js"></script>
+
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/auth.js"></script>
     <script type="text/javascript">
       document.addEventListener("deviceready",function(){
-          localStorage.clear();
+          sync_get_data();
           $('#loading').fadeOut();
       });
 
