--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
       document.addEventListener("deviceready",function(){
-          localStorage.clear();
+         // localStorage.clear();
           $('#loading').fadeOut();
       });
 
