--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -78,6 +78,7 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/commun.js"></script>
+    <script type="text/javascript" src="js/sync.js"></script>
     <script type="text/javascript" src="js/dashboard.js"></script>
 
     <script type="text/javascript" src="cordova.js"></script>
