--- a/www/inspeccion.html
+++ b/www/inspeccion.html
@@ -168,7 +168,10 @@
                                               <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                                                     <!-- Wrapper for slides -->
                                                     <div class="carousel-inner" role="listbox">
-
+                                                        <div class="item active"><img style="height:300px; margin:auto" src="img/logo.png"></div>
+                                                        <div class="item"><img style="height:300px; margin:auto" src="img/logo.png"></div>
+                                                        <div class="item"><img style="height:300px; margin:auto" src="img/logo.png"></div>
+                                                        <div class="item"><img style="height:300px; margin:auto" src="img/logo.png"></div>
                                                     </div>
 
                                                     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -180,13 +183,14 @@
                                                       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                                                       <span class="sr-only">Next</span>
                                                     </a>
-                                                  </div>
-                                          </div>
-                                      </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        </div></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -196,7 +200,6 @@
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <script type="text/javascript" src="js/localstorage.js"></script>
   <script type="text/javascript" src="js/commun.js"></script>
-  <script type="text/javascript" src="js/attach_pdf.js"></script>
   <script type="text/javascript" src="js/sync.js"></script>
   <script type="text/javascript" src="js/inspection.js"></script>
   <script type="text/javascript" src="cordova.js"></script>
@@ -204,9 +207,7 @@
   	document.addEventListener("deviceready", function(){
         var url = window.location.href;
         var params = getParams(url);
-        sync_data(function(){
-            inspection.start(params.inspection_id);
-        })
+        inspection.start(params.inspection_id);
         setTimeout(function(){
             permissions();
         },2000)
