--- a/www/navbar.html
+++ b/www/navbar.html
@@ -9,9 +9,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <div id="buttonmenu" name="buttonmenu" style="width: auto;height: 50px; text-align: right; padding-top: 14px;">
-            <a class="hide" id="dbRefresh" style="font-size:1.6em"><i class="fa fa-refresh"></i></a>
-            <a id="netStatus" style="font-size:1.6em"><i class="fa fa-wifi"></i></a>
+        <div id="buttonmenu" name="buttonmenu" style="width: auto;height: 50px; text-align: right;padding-top:3px">
+            <a class="hide" id="dbRefresh"  class="navbar-link"><i class="fa fa-refresh"></i></a>
+            <a id="netStatus" class="navbar-link"><i class="fa fa-wifi"></i></a>
         </div>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
