--- a/www/inspeccion.html
+++ b/www/inspeccion.html
@@ -95,10 +95,10 @@
                             <i class='inspection_status_4 hide fa fa-comments-o'></i><small class="inspection_status_4 hide"> Respondido</small>
                             <i class='inspection_status_5 hide fa fa-check-square-o'></i><small class="inspection_status_5 hide"> Revisado</small>
                             <i class='inspection_status_6 hide fa fa-power-off'></i><small class="inspection_status_6 hide"> Cerrado</small>
-                            <span id="prespuesto" class="pull-right hide online-required" style="font-size:0.7em; line-height: 2em;" class="pull-right">
+                            <span id="presupuesto" class="pull-right hide online-required" style="font-size:0.7em; line-height: 2em;" class="pull-right">
                                 <small class="label label-primary">Presupuesto</small>
-                                <a class="download-prespuesto"><i class="fa fa-download"></i></a>
-                                <a class="delete-prespuesto"><i class="fa fa-trash"></i></a>
+                                <a class="download-presupuesto"><i class="fa fa-download"></i></a>
+                                <a class="delete-presupuesto"><i class="fa fa-trash"></i></a>
                             </span>
                         </h3>
                         <div id="progress" class="progress hide">
