--- a/www/navbar.html
+++ b/www/navbar.html
@@ -10,7 +10,7 @@
             <span class="icon-bar"></span>
         </button>
         <div id="buttonmenu" name="buttonmenu" style="width: auto;height: 50px; text-align: right;padding-top:3px">
-            <a class="hide" id="dbRefresh"  class="navbar-link"><i class="fa fa-refresh"></i></a>
+            <a id="dbRefresh" class="navbar-link"><i class="fa fa-refresh"></i></a>
             <a id="netStatus" class="navbar-link"><i class="fa fa-wifi"></i></a>
         </div>
     </div>
